@@ -23,9 +23,11 @@ Alien::bz2                                     = 0.12
 Alien::bz2::Installer                          = 0.03
 Alien::Editline                                = 0.02
 Alien::FFI                                     = 0.02
+Alien::gmake                                   = 0.03
 Alien::Libarchive                              = 0.21
 Alien::Libarchive::Installer                   = 0.08
 Alien::MSYS                                    = 0.07
+Alien::nasm                                    = 0.03
 Alien::o2dll                                   = 0.02
 Alien::Packages::Cygwin                        = 0.02
 AnyEvent::Finger                               = 0.09
