@@ -10,6 +10,8 @@ Alien::MSYS
 Alien::Packages::Cygwin
 Alien::bz2
 Alien::bz2::Installer
+Alien::gmake
+Alien::nasm
 Alien::o2dll
 AnyEvent
 AnyEvent::FTP
